# case-notes-eval

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: RUBRIC.md  assurance-boundary.md
examples/sample_logs/: 2026-07-13T13-52-56-00-00_case-notes_45frca4hsuUZfCzmbJX2s7.eval  2026-07-13T13-52-56-00-00_case-notes_VgnCknGR6BFGcqQArYQxoy.eval  2026-07-13T13-52-57-00-00_case-notes_2cbhR6bDDsB9YfoXQMfJBb.eval  2026-07-13T13-52-57-00-00_case-notes_9oRbJWHxYZRVUiSrvcUgMG.eval
src/case_notes_eval/: __init__.py  analyse.py  recording_checker.py  task.py
src/case_notes_eval/data/: flagged_phrases.json  scenarios.jsonl  suppression_rules.json
tests/: test_analyse.py  test_checker.py
