[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "case-notes-eval"
version = "0.1.0"
description = "Inspect evaluation: do LLMs writing case notes separate observation from interpretation, and can they be induced to evade a lexical validator?"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Warren Smith" }]
keywords = ["inspect", "evaluation", "llm", "safeguarding", "adversarial", "case-notes"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "inspect_ai>=0.3.60",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6", "mypy>=1.8"]

[project.scripts]
case-notes-analyse = "case_notes_eval.analyse:main"
case-notes-check = "case_notes_eval.recording_checker:_main"

[project.urls]
Homepage = "https://github.com/repowazdogz-droid/case-notes-eval"
Issues = "https://github.com/repowazdogz-droid/case-notes-eval/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/case_notes_eval"]
# The data/ dir lives inside the package, so `packages` already ships the JSON and
# JSONL. Hatchling excludes some data suffixes from sdists by default, so include
# them explicitly for the sdist path.
artifacts = ["src/case_notes_eval/data/*.json", "src/case_notes_eval/data/*.jsonl"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["inspect_ai.*"]
ignore_missing_imports = true
